more minor updates

--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -8,6 +8,10 @@ Use track title instead of file name for "Music" listings
 Published modified Bananas library
 Switched to build with Java 1.5
 
+*** Please send in bug reports if there are any problems with things
+    that work fine in 2.3.0.  This release should not behave any
+    differently ***
+
 Version 2.3.0:
 ----------------------
 Native version for Windows
