--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -807,17 +807,17 @@ How to play music with slideshow:
 
 Winamp skins:
 
-The project has permission from the author of the Metrix Winamp classic skins (Sven Kistner) to distribute the skins with the Galleon project:
+The project has permission from the author of the Metrix Winamp classic
+skins (Sven Kistner) to distribute the skins with the Galleon project:
 
 http://www.winamp.com/skins/browse.php?search=yes&filter=S&query=metrix
 
-However, for copyright reasons, the skins are not checked into the project CVS. The Galleon build script will add any *.wsz Winamp skin files
-
-that are in the media/winamp directory to a package build. The Galleon GUI will detect any *.wsz files that are in the media/winamp directory and will 
-
-allow the user to pick a skin in the music app configuration screen.
-
-
+However, for copyright reasons, the skins are not checked into the
+project CVS. The Galleon build script will add any *.wsz Winamp skin
+files that are in the media/winamp directory to a package build. The
+Galleon GUI will detect any *.wsz files that are in the media/winamp
+directory and will allow the user to pick a skin in the music app
+configuration screen.
 
 Download your favorite Winamp Classic skin from: http://www.winamp.com/skins
 
@@ -825,12 +825,9 @@ The following skin is recommended: http://www.winamp.com/skins/details.php?id=35
 
 
 
-(If you have Winamp installed, then don't click on the Download button on
-
-the Winamp page; rather use the right-click menu to do a Save As of the
-
-file)
-
+(If you have Winamp installed, then don't click on the Download button
+on the Winamp page; rather use the right-click menu to do a Save As of
+the file)
 
 
 
