--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -3,6 +3,9 @@ Galleon
 
 Version 2.4.2:
 ----------------------
+* Added scalable backgrounds that fit the screen in HD mode for pictures and music
+* Fixed the HD playbar in the music app so it draws properly
+* Increased font size on music app in HD mode
 
 Version 2.4.1:
 ----------------------
