fix tracker #1760027: properties for configure galleon, remove debug code in postflight

--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -6,6 +6,7 @@ Version 2.4.2:
 * Added scalable backgrounds that fit the screen in HD mode for pictures and music
 * Fixed the HD playbar in the music app so it draws properly
 * Increased font size on music app in HD mode
+* Fix MacOS problems (tracker #1760027)
 
 Version 2.4.1:
 ----------------------
