--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -7,6 +7,7 @@ Version 2.4.2:
 * Fixed the HD playbar in the music app so it draws properly
 * Fixed layout on music player screen when in HD mode
 * Increased font size on music app in HD mode for all screens
+* Fixed screen saver on music app to fill the entire screen
 * Fixed lyrics downloading to grab from a different source since lyrictracker is down
 * Fix MacOS problems (tracker #1760027)
 
