Changed the way skin images get loaded so they don't take up as much memory and cpu when being read

--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -3,6 +3,7 @@ Galleon
 
 Version 2.4.2:
 ----------------------
+* Reimplemented skin resource loading so they don't use as much memory and cpu
 * Added scalable backgrounds that fit the screen in HD mode for pictures and music
 * Fixed the HD playbar in the music app so it draws properly
 * Fixed layout on music player screen when in HD mode
