--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -1,6 +1,9 @@
 Galleon
 -------
 
+Version 2.5.2:
+----------------------
+
 Version 2.5.1:
 ----------------------
 * Fixed a screen saver bug--it would consume all your CPU time on the PC
