--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -4,6 +4,7 @@ Galleon
 Version 2.5.2:
 ----------------------
 * Fixed bug with GoBack truncating files after 2GB had been transferred.
+* Fixed another CPU-spinning bug in the screen saver
 
 Version 2.5.1:
 ----------------------
