prepare for Galleon 2.5.3

--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -1,6 +1,9 @@
 Galleon
 -------
 
+Version 2.5.3:
+----------------------
+
 Version 2.5.2:
 ----------------------
 * Fixed bug with GoBack truncating files after 2GB had been transferred.
