mention Weather fixes

--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -6,6 +6,7 @@ Version 2.5.3:
 * Update JmDNS package to 1.0 (not using JmDNS from
   hme-host-sample-1.4.jar anymore); seems to help on Mac OS X 10.5
 * Added TiVo name to detail screen in ToGo app
+* Updated weather forecast parsing to handle more cases
 
 Version 2.5.2:
 ----------------------
