describe out-of-memory problems with iPhoto

--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -9,7 +9,10 @@ Version 2.5.3:
 * Updated weather forecast parsing to handle more cases
 * Fixed local radar after change on weather source web pages
 * Update help URLs to point at content now on sourceforge.net
-* Fixed iPhoto album parser to clean out old albums during library update
+* Fixed iPhoto album parser to clean out old albums during library
+  update.  You may have to restart Galleon a couple of times so that it
+  can finish cleaning out huge volumes of stale data in the album
+  database (it may run out of memory).
 
 Version 2.5.2:
 ----------------------
