--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -10,12 +10,7 @@ Version 2.5.3:
 * Fixed local radar after change on weather source web pages
 * Update help URLs to point at content now on sourceforge.net
 * Fixed iPhoto album parser to clean out old albums during library
-  update.  You may have to restart Galleon a couple of times so that it
-  can finish cleaning out huge volumes of stale data in the album
-  database (it may run out of memory).  Or, edit
-  /Applications/Galleon/Galleon Server.app/Contents/Info.plist
-  and change -Xmx64m to -Xmx256m to allow the Java heap to grow large
-  enough to handle the database cleanup.
+  update.
 
 
 
