added line about local radar range

--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -4,6 +4,8 @@ Galleon
 Version 2.5.4:
 ----------------------
 * Fix ToGo looping bug on null recording date (1811137)
+* Added user-selectable range for local radar image (100, 300, 600 miles)
+
 
 Version 2.5.3:
 ----------------------
