--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -6,8 +6,9 @@ Version 2.5.4:
 * Fix ToGo looping bug on null recording date (1811137)
 * Added user-selectable range for local radar image (100, 300, 600 miles) in Weather
 * auto-subdirectory publishing for GoBack, avoids the need to do it yourself
-  and also avoids bugs in TiVo folder navigation.
-  (XXX need to clean up, File.separator and DOS shortcuts)
+  and also avoids bugs in TiVo folder navigation in older TiVo service
+  releases (Series 3 and HD should be OK without this).
+  (XXX need to clean up some more for File.separator and DOS shortcuts)
 
 * XML parsing of recording meta-data for non-Galleon-created video
   files in GoBack areas.  e.g. if you post-process .TiVo files into
