--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -15,8 +15,8 @@ Version 2.5.4:
   files in GoBack areas.  e.g. if you post-process .TiVo files into
   .mpg, just put the XML output containing the show details, in the same
   format as it comes from the TiVo, into a .xml file with the same prefix) 
-* Enabled latent store-by-show handling in GoBack server (available on
-  GoBack preferences pane)
+* Enabled store-by-show handling in GoBack server (available on
+  GoBack preferences pane).
 * Fix for linux Makefile (1815568) and init script for distro independence
 
 Version 2.5.3:
