--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -19,6 +19,7 @@ Version 2.5.5:
   - fixed channel/station display issue
   - show copy-protected recordings (to be consistent with TiVo Desktop and other
     Now Playing List applications); identify with lock icon
+  - fixed display of Length statistic on main Now Playing screen
 
 
 Version 2.5.4:
