--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -1,6 +1,9 @@
 Galleon
 -------
 
+Version 2.5.6:
+----------------------
+
 Version 2.5.5:
 ----------------------
 * added java parameter to favor IPv4 (should eliminate the need for disabling
