--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -7,6 +7,7 @@ Version 2.5.6:
   TiVo (usually means TiVo HTTPS server is hung)
 * Some miscellaneous code cleanups
 * Upgraded to commons-betwixt-0.8
+* Fix for linux Makefile (3107228) and init script for Gentoo installs
   
 Version 2.5.5:
 ----------------------
