--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -8,6 +8,7 @@ Version 2.5.6:
 * Some miscellaneous code cleanups
 * Upgraded to commons-betwixt-0.8
 * Fix for linux Makefile (3107228) and init script for Gentoo installs
+* Update weather application to remove inoperative queries from Weather.com
   
 Version 2.5.5:
 ----------------------
